[package]
name = "stm32l4x6-hal"
version = "0.0.5"
authors = ["Douman <douman@gmx.se>"]
keywords = ["arm", "cortex-m", "stm32", "hal", "embedded-hal"]
description = "HAL for the STM32L4x6 family of microcontrollers"
readme = "README.md"
repository = "https://github.com/DoumanAsh/stm32l4x6_hal"
license = "Apache-2.0"

[dependencies]
cortex-m = "0.4"
embedded-hal = "0.1.0"
nb = "0.1.0"
stm32l4x6 = "0"

[dependencies.cast]
default-features = false
version = "0"

[features]
rt = ["stm32l4x6/rt"]
STM32L476VG = []

[package.metadata.docs.rs]
features = ["STM32L476VG", "rt"]
