[package]
name = "stm32l4x6-hal"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
keywords = ["arm", "cortex-m", "stm32", "hal", "embedded-hal"]
description = "HAL for the STM32L4x6 family of microcontrollers"
readme = "README.md"
repository = "https://github.com/DoumanAsh/stm32l4x6_hal"
license = "Apache-2.0"

[dependencies]
cortex-m = "0.5"
nb = "0.1"
stm32l4x6 = "0.5"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.void]
default-features = false
version = "1"

[dependencies.cast]
default-features = false
version = "0.2"

[features]
rt = ["stm32l4x6/rt"]
STM32L476VG = []
STM32L496AG = []

[package.metadata.docs.rs]
#features = ["STM32L476VG", "STM32L496AG", "rt"]
features = ["STM32L476VG", "rt"]
